--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.6 - Gluons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.6 - Gluons.md
@@ -24,23 +24,23 @@ The property of "color charge" is reinterpreted as an emergent geometric attribu
 
     The specific color state is determined by the distribution of the six personality architrinos among the three binaries of the Noether core. Each binary is assumed to bind two personality architrinos in its polar regions.
 
-    #### Up Quark (Net Personality Charge: +4ε)
-    An up quark consists of five personality Positrinos (+ε) and one Electrino (-ε). The color is determined by which of the three binaries binds the lone Electrino.
+    #### Up Quark (Net Personality Charge: $+4\epsilon$)
+    An up quark consists of five personality Positrinos ($+\epsilon$) and one Electrino ($-\epsilon$). The color is determined by which of the three binaries binds the lone Electrino.
 
     | Color | Binary 1 Charge | Binary 2 Charge | Binary 3 Charge |
     | :--- | :---: | :---: | :---: |
-    | **Red** | 0 (+ε, -ε) | +2ε (+ε, +ε) | +2ε (+ε, +ε) |
-    | **Green** | +2ε (+ε, +ε) | 0 (+ε, -ε) | +2ε (+ε, +ε) |
-    | **Blue** | +2ε (+ε, +ε) | +2ε (+ε, +ε) | 0 (+ε, -ε) |
+    | **Red** | 0 ($+\epsilon$, $-\epsilon$) | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) |
+    | **Green** | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) | 0 ($+\epsilon$, $-\epsilon$) | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) |
+    | **Blue** | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) | 0 ($+\epsilon$, $-\epsilon$) |
 
-    #### Down Quark (Net Personality Charge: -2ε)
-    A down quark consists of two personality Positrinos (+ε) and four Electrinos (-ε). The anticolor is determined by which of the three binaries binds the two Positrinos.
+    #### Down Quark (Net Personality Charge: $-2\epsilon$)
+    A down quark consists of two personality Positrinos ($+\epsilon$) and four Electrinos ($-\epsilon$). The anticolor is determined by which of the three binaries binds the two Positrinos.
 
     | Anticolor | Binary 1 Charge | Binary 2 Charge | Binary 3 Charge |
     | :--- | :---: | :---: | :---: |
-    | **Antired** | +2ε (+ε, +ε) | -2ε (-ε, -ε) | -2ε (-ε, -ε) |
-    | **Antigreen**| -2ε (-ε, -ε) | +2ε (+ε, +ε) | -2ε (-ε, -ε) |
-    | **Antiblue** | -2ε (-ε, -ε) | -2ε (-ε, -ε) | +2ε (+ε, +ε) |
+    | **Antired** | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) | $-2\epsilon$ ($-\epsilon$, $-\epsilon$) | $-2\epsilon$ ($-\epsilon$, $-\epsilon$) |
+    | **Antigreen**| $-2\epsilon$ ($-\epsilon$, $-\epsilon$) | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) | $-2\epsilon$ ($-\epsilon$, $-\epsilon$) |
+    | **Antiblue** | $-2\epsilon$ ($-\epsilon$, $-\epsilon$) | $-2\epsilon$ ($-\epsilon$, $-\epsilon$) | $+2\epsilon$ ($+\epsilon$, $+\epsilon$) |
 
 -   **Color Confinement and Singlets:** The requirement for hadrons to be "colorless" is interpreted as a condition for overall system stability. A stable hadron (baryon or meson) is one where the constituent quark cores have achieved a symmetric, equilibrium configuration of their coupled polar vortices. This stable, "color singlet" state minimizes the external projection of the strong force field, effectively confining it within the hadron.
 
