--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -1,4 +1,4 @@
-This document defines the **4D Euclidean timespace** that serves as the fixed, non-dynamical arena for our model. It is the mathematical combination of absolute 3D space and absolute time, forming a static background upon which physical phenomena and their dynamics (e.g., paths, worldlines) unfold. Timespace is a vessel through which point objects and potential emissions travel
+A single **4D Euclidean timespace** serves as the fixed, non-dynamical arena for our model. It is the mathematical combination of absolute 3D space and absolute time, forming a static background upon which physical phenomena and their dynamics (e.g., paths, worldlines) unfold. Timespace is a vessel through which point objects and potential emissions travel
 
 A key property of this Euclidean timespace is its **homogeneity**. There is no privileged origin point $(t, x, y, z) = (0, 0, 0, 0)$. The choice of origin is purely a matter of convention for setting up a coordinate system. This implies that the arena has no beginning in time and no central point in space; it is eternal and infinite.
 
