--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
@@ -2,19 +2,29 @@ Absolute time flows uniformly and independently of space and any events within i
 
 ### **Mathematical Description**
 
-1.  **Model:** Time is modeled as the real number line:
+1.  **Model (non-dimensionalized):** Time is modeled as the real number line:
     $$
     \mathbb{R}
     $$
-    A specific instant is represented by a point $t \in \mathbb{R}$.
+    A specific instant is represented by a point $t \in \mathbb{R}$. Throughout, we non-dimensionalize time by choosing a reference timescale $T_0>0$ so that physical time $\hat{t}$ is given by
+    $$
+    \hat{t} = T_0\, t,
+    $$
+    making $t$ dimensionless.
 
 2.  **Linear Advancement:** Time progresses at a constant rate. The duration (interval) between two instants $t_1$ and $t_2$ is given by the distance:
     $$
     \Delta t = |t_2 - t_1|
     $$
+    Correspondingly, physical duration satisfies
+    $$
+    \Delta \hat{t} = T_0\, \Delta t.
+    $$
 
-3.  **Forward Direction (Arrow of Time):** The set of all instants is totally ordered. For any two distinct moments $t_1$ and $t_2$, one must precede the other ($t_1 < t_2$ or $t_2 < t_1$). By convention, time advances in the direction of increasing $t$. The "past" corresponds to smaller values of $t$, and the "future" to larger values.
+3.  **Time Orientation (not a thermodynamic arrow):** The set of all instants is totally ordered. For any two distinct moments $t_1$ and $t_2$, one must precede the other ($t_1 < t_2$ or $t_2 < t_1$). By convention, “future” corresponds to increasing $t$ and “past” to decreasing $t$. Any physical arrow of time (e.g., thermodynamic) is an emergent property of dynamics, not a kinematic postulate.
 
 4.  **Absolute Nature:** The time coordinate $t$ is universal. The duration $\Delta t$ between two events is the same for all observers, regardless of their position or motion.
 
-5.  **No Absolute Origin:** The choice of $t=0$ is arbitrary and serves only as a reference point. The timeline extends infinitely into the past ($t \to -\infty$) and future ($t \to +\infty$), implying no beginning or end.
+5.  **No Absolute Origin and Completeness:** The choice of $t=0$ is arbitrary and serves only as a reference point. The timeline extends infinitely into the past ($t \to -\infty$) and future ($t \to +\infty$); as a manifold, $\mathbb{R}$ is connected and without endpoints.
+
+6.  **Symmetries:** The kinematic symmetry group of time is the additive group $(\mathbb{R}, +)$ of time translations. At the kinematic level, time-reversal $t \mapsto -t$ is a symmetry; the chosen time orientation selects a direction for modeling but does not alter the invariance of the background structure.
