--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
@@ -4,7 +4,13 @@ A core assumption is that space is **homogeneous and isotropic**:
 -   **Homogeneity**: There is no special or central point. Any location is equivalent to any other.
 -   **Isotropy**: There is no preferred direction in space.
 
-This implies there is no absolute origin; any chosen origin is merely a convenient reference for a coordinate system.
+This implies there is no absolute origin; any chosen origin is merely a convenient reference for a coordinate system. Only differences (displacements) have geometric meaning; origins are gauge choices.
+
+**Symmetry group:** The kinematic symmetry group of absolute space is the Euclidean group
+$$
+E(3) = \mathbb{R}^3 \rtimes SO(3).
+$$
+The geometry is homogeneous and isotropic under $E(3)$: translations and rotations act transitively without preferred locations or directions.
 
 Here’s how to define it formally, mirroring the structures in the 4D Euclidean manifold:
 
@@ -31,7 +37,7 @@ with the flat metric tensor:
 $$
 g = dx^2 + dy^2 + dz^2
 $$
-This metric has a positive-definite signature $(+, +, +)$.
+This metric has a positive-definite signature $(+, +, +)$. The Riemann curvature tensor vanishes identically (flat space). The Levi-Civita connection is torsion-free, and its geodesics are straight lines (constant-velocity solutions in Cartesian coordinates).
 
 ---
 
@@ -44,4 +50,22 @@ $$
 The spatial line element is:
 $$
 ds^2 = \delta_{ij} \, dx^i dx^j = dx^2 + dy^2 + dz^2
+$$
+
+---
+
+### **4. Frames and Coordinates**
+- Any Cartesian frame related by an element of $E(3)$ (translations and rotations) is physically equivalent. Quantities expressed in such frames transform in the usual tensorial way.
+- Curvilinear coordinates (e.g., spherical, cylindrical) are allowed; the metric components transform accordingly from $g_{ij} = \delta_{ij}$, and all geometric statements remain coordinate-invariant.
+
+---
+
+### **5. Measure and Operators**
+The standard volume element is
+$$
+dV = dx\, dy\, dz.
+$$
+For later PDE formulations, the Euclidean Laplacian is
+$$
+\Delta = \partial_x^2 + \partial_y^2 + \partial_z^2 = \delta^{ij}\,\partial_i\partial_j.
 $$
