--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -1,78 +1,85 @@
-A single **4D Euclidean timespace** serves as the fixed, non-dynamical arena for our model. It is the mathematical combination of absolute 3D space and absolute time, forming a static background upon which physical phenomena and their dynamics (e.g., paths, worldlines) unfold. Timespace is a vessel through which point objects and potential emissions travel
-
-A key property of this Euclidean timespace is its **homogeneity**. There is no privileged origin point $(t, x, y, z) = (0, 0, 0, 0)$. The choice of origin is purely a matter of convention for setting up a coordinate system. This implies that the arena has no beginning in time and no central point in space; it is eternal and infinite.
-
-Here’s how to define this timespace in different levels of formality:
+We model absolute timespace as a product manifold equipped with Galilean/Newton–Cartan structure, consistent with absolute time and absolute space. The arena is fixed, non-dynamical, homogeneous, and without a privileged origin. Choices of temporal zero and spatial origin are conventions.
 
 ---
 
-### **1. Pure Math (metric space version)**  
-We model Euclidean time and space as  
+### 1. Product Structure (set-theoretic/topological)
+We take the background to be the product manifold
 $$
-\mathbb{R}^4
-$$  
-with coordinates $(t, x, y, z)$ and metric  
+\mathcal{M} = \mathbb{R} \times \mathbb{R}^3,
 $$
-d(\boldsymbol{p}, \boldsymbol{q}) = \sqrt{(t_p - t_q)^2 + (x_p - x_q)^2 + (y_p - y_q)^2 + (z_p - z_q)^2}.
-$$  
+with coordinates $(t, x, y, z)$. Time is the absolute, globally defined parameter described in 00.0.1 (non-dimensionalized there); we do not combine $dt$ with spatial differentials into a single 4D non-degenerate metric.
 
-A **continuous path** is a continuous map  
+Simultaneity slices are
 $$
-\gamma: \mathbb{R} \to \mathbb{R}^4, \quad s \mapsto (t(s), x(s), y(s), z(s))
-$$  
-where $s$ is a parameter (could be arc length, proper time, or just a dummy variable).  
+\Sigma_t = \{t\} \times \mathbb{R}^3,
+$$
+each diffeomorphic to $\mathbb{R}^3$.
 
 ---
 
-### **2. Differential Geometry (Riemannian manifold version)**  
-We define the manifold  
+### 2. Newton–Cartan data (kinematic structure)
+The kinematic structure is given by:
+- Absolute clock 1-form
 $$
-(\mathbb{R}^4, g)
-$$  
-with  
+\tau = dt \quad (\text{nowhere-vanishing}).
 $$
-g = dt^2 + dx^2 + dy^2 + dz^2
-$$  
-(a flat, positive-definite metric — *Euclidean signature*).  
+- Spatial metric on the kernel of $\tau$ (the simultaneity slices). In Cartesian coordinates,
+$$
+h = dx^2 + dy^2 + dz^2, \quad h_{ij} = \delta_{ij}, \quad i,j \in \{1,2,3\}.
+$$
+- No non-degenerate 4D metric on $\mathcal{M}$. The pair $(\tau, h)$ defines the background geometry.
+- A flat, torsion-free connection $\nabla$ compatible with the structure,
+$$
+\nabla \tau = 0, \qquad \nabla h = 0.
+$$
+In global inertial coordinates, the connection coefficients vanish and spatial geodesics within each $\Sigma_t$ are straight lines.
 
-A **path** is a smooth curve  
-$$
-\gamma(s) \in \mathbb{R}^4
-$$  
-with tangent vector  
-$$
-\dot{\gamma}^a(s) = \frac{d x^a}{ds}, \quad a \in \{0,1,2,3\}
-$$  
-where $x^0 = t$, $x^1 = x$, etc.  
-
-The **length** of the path is  
-$$
-L = \int \sqrt{g_{ab} \, \dot{\gamma}^a(s) \, \dot{\gamma}^b(s)} \ ds.
-$$  
+Each slice $(\Sigma_t, h)$ carries the usual Euclidean geometry of absolute space (00.0.2).
 
 ---
 
-### **3. Physics-Flavored (index notation)**  
-Coordinates: $x^\mu = (t, x, y, z)$, $\mu \in \{0,1,2,3\}$  
-Metric:  
+### 3. Kinematics and paths
+A worldline is a map
 $$
-g_{\mu\nu} = \delta_{\mu\nu}
-$$  
-Line element:  
+x: I \subset \mathbb{R} \to \mathbb{R}^3, \quad t \mapsto x(t),
 $$
-ds^2 = \delta_{\mu\nu} \, dx^\mu dx^\nu = dt^2 + dx^2 + dy^2 + dz^2
-$$  
-Path:  
+with $t$ increasing (time orientation). The velocity and acceleration are
 $$
-x^\mu = x^\mu(s), \quad \frac{dx^\mu}{ds} \ \text{continuous}.
-$$  
+v(t) = \frac{dx}{dt}, \qquad a(t) = \frac{dv}{dt}.
+$$
+There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations are measured separately by $h$ and $\tau$.
 
 ---
 
-💡 In **relativity**, you’d swap the Euclidean metric for the **Minkowski metric**. 
-$$
-ds^2 = -c^2 dt^2 + dx^2 + dy^2 + dz^2
-$$  
-However, in the neoclassical model timespace is flat and it is permeated by scalable assemblies that behave as described by Einstein's spacetime.  
+### 4. Symmetry group (Galilean group)
+The kinematic symmetry group is the Galilean group, preserving $\tau$, $h$, and the foliation $t=\text{const}$:
+- Time translations: $t' = t + t_0$
+- Spatial translations and rotations: $x' = R\,x + a$, with $R \in SO(3)$
+- Galilean boosts: $x' = R\,x + v\, t + a$, $t' = t + t_0$
 
+Equivalently, the group combines time translations $\mathbb{R}$, spatial translations $\mathbb{R}^3$, rotations $SO(3)$, and boosts $\mathbb{R}^3$ in the standard semidirect-product structure.
+
+---
+
+### 5. Coordinates and frames
+- Any two Cartesian frames within a slice $\Sigma_t$ related by $E(3)$ are equivalent.
+- Allowed coordinate transformations preserve the foliation by constant-$t$ hypersurfaces (no rotations mixing $t$ with $x^i$).
+
+---
+
+### 6. Measures and spatial operators
+Time is measured by $\tau = dt$. The spatial volume element on each slice is
+$$
+dV = dx\,dy\,dz.
+$$
+For field theories/PDEs defined on $\Sigma_t$, the Euclidean Laplacian is
+$$
+\Delta = \partial_x^2 + \partial_y^2 + \partial_z^2 = \delta^{ij}\,\partial_i \partial_j.
+$$
+A natural spacetime measure for integration is $dt\, dV$.
+
+---
+
+### 7. Relation to relativistic descriptions
+For comparison, relativistic models employ a Lorentzian metric on a 4D manifold, leading to lightcones and a universal speed $c$. In our neoclassical model, the background remains Newton–Cartan with absolute time; any Einstein-like phenomenology is emergent from scalable assemblies on this fixed background, not from curvature of the background itself.
 
