--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -1,4 +1,4 @@
-We model absolute timespace as a product manifold equipped with Galilean/Newton–Cartan structure, consistent with absolute time and absolute space. The arena is fixed, non-dynamical, homogeneous, and without a privileged origin. Choices of temporal zero and spatial origin are conventions.
+We model absolute timespace as a product manifold equipped with Galilean/Newton–Cartan structure, consistent with absolute time and absolute space. The arena is fixed, non-dynamical, homogeneous, and without a privileged origin. Choices of temporal zero and spatial origin are conventions. We deliberately use the term “timespace” to introduce a neoclassical concept and to avoid confusion with relativistic “spacetime.”
 
 ---
 
