--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -1,6 +1,6 @@
 ### Core Emission Properties
 
-The fundamental action of an Architrino is the continuous emission of a potential field. This process has the following key properties:
+An Architrino is a transceiver: it continuously emits potential wavefronts and also receives and responds to incoming wavefronts from other sources. The fundamental transmit operation of an Architrino is the continuous emission of a potential field. This process has the following key properties:
 
 -   **Constant Rate of Wavefront Emission:** Each Architrino emits potential wavefronts at a constant rate. The magnitude of the potential carried by each wavefront, however, is modulated by the particle's speed.
 -   **Point of Emission:** The potential emerges at the Architrino's current location (radius = 0) at time $t=\text{now}$ as a spatial Dirac delta.
