--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
@@ -12,7 +12,7 @@ E(3) = \mathbb{R}^3 \rtimes SO(3).
 $$
 The geometry is homogeneous and isotropic under $E(3)$: translations and rotations act transitively without preferred locations or directions.
 
-Here’s how to define it formally, mirroring the structures in the 4D Euclidean manifold:
+Here’s how to define it formally:
 
 ---
 
