--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -78,6 +78,8 @@ $$
 $$
 A natural spacetime measure for integration is $dt\, dV$.
 
+Units and distances. We do not define a 4D distance mixing $t$ and $x^i$. Durations are measured by the absolute clock $\tau=dt$ and spatial distances within each slice by the Euclidean metric $h_{ij}=\delta_{ij}$. If one needs to compare time and length scales, fix a spatial scale $L_0$ and the time scale $T_0$ (see 00.0.1), which induces a characteristic speed $v_0=L_0/T_0$. By default we avoid such identifications; analyses use $\tau$ and $h$ separately.
+
 ---
 
 ### 7. Relation to relativistic descriptions
