--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -39,6 +39,8 @@ $$
 - **Conservation:** $\displaystyle \int_{\mathbb{R}^3}\rho(t,\mathbf{s})\,\mathrm{d}^3s = q$ for all $t>t_0$.
 - **Pointwise scaling on the sphere:** the surface density scales as $q/(4\pi r^2)$, giving the stated $1/r^2$ falloff on the expanding sphere.
 
+Plain language: the bigger the sphere gets, the thinner the “potential paint” on it becomes—spread over a larger area—in just the right way to keep the total amount constant.
+
 ---
 
 ### Governing conservation law
@@ -54,6 +56,8 @@ $$
 $$
 whose delayed solution is $\rho(t,\mathbf{s})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)H(\tau)$.
 
+Plain language: the conservation law says nothing is lost or gained as the ripple expands; what flows through each spherical surface in time is exactly what was injected at the center.
+
 ---
 
 ### Advanced Dynamics: Velocity Regimes and Emission
@@ -67,7 +71,7 @@ The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a
 -   **Super-field Speed ($|\mathbf{v}_a| > v$):** The particle travels a distance greater than the wavefront's radius. It is located *outside* the sphere of its most recent emission, moving ahead of it.
 -   **Symmetry Point ($|\mathbf{v}_a| = v$):** The particle travels exactly on the edge of its own expanding wavefront. This represents a critical symmetry-breaking point in its dynamics.
 
-It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted earlier in its path history. This is somewhat analogous to a speedboat passing it's own wake, and later curving or stopping such that it's past wake catches up and passes.
+It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted earlier in its path history. This is somewhat analogous to a speedboat passing it's own wake, and later curving or stopping such that it's past wake catches up and passes. These regimes control the structure and multiplicity of causal intersection times $C_a(t)$ along worldlines (see Action and Interaction).
 
 #### **Velocity-Modulated Emission**
 While an Architrino is a constant rate emitter of potential per unit time, the strength of the impulse generated at any instant is modulated by its speed. The emission strength is inversely related to the particle's speed, being maximal for a stationary particle and decreasing as speed increases.
@@ -83,5 +87,7 @@ $$
 Consequently, the density on the expanding sphere is also scaled by this factor:
 $$
 \rho(t,\mathbf{s}) = \frac{q_{eff}(t_0)}{4\pi r^2}\,\delta\!\big(r - v\,\tau\big)\,H(\tau)
+
+Plain language: $q_{eff}$ acts like a dimmer switch—the faster the emitter is moving at emission time, the dimmer that particular wavefront is.
 $$
 
