--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -49,4 +49,4 @@ For composite systems (assemblies), it is essential to distinguish between the t
 > **Energy Shielding**
 > In stable assemblies like the **Noether Core**, the rapid internal motions of positive and negative Architrinos cause their emitted potential fields to largely cancel out via superposition. This "shields" the vast majority of the assembly's enormous internal energy from the outside world.
 
-Inertia is therefore not a fundamental property of matter, but an **emergent property** of assemblies. It reflects the degree to which an assembly's total internal energy is shielded. The tiny, residual external field of a shielded assembly is what gives it its inertial properties and determines its momentum for a given group velocity. This concept provides a physical explanation for the hierarchy problem—why the observed inertial properties of particles are so much smaller than what might be expected from the Planck-scale energies involved in their fundamental structure.
+Inertia is therefore not a fundamental property of matter, but an **emergent property** of assemblies. It reflects the degree to which an assembly's total internal energy is shielded. The tiny, residual external field of a shielded assembly is what gives it its inertial properties and determines its momentum for a given group velocity. This concept provides a physical explanation for the hierarchy problem—why the observed inertial properties of particles are so much smaller than what might be expected from the Planck-scale energies involved in their fundamental structure. In plain language: inside a stable assembly, huge internal pushes mostly cancel; only a faint “whisper” leaks out, and that faint residue is what we perceive as inertia.
