--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
@@ -10,7 +10,7 @@ Absolute time flows uniformly and independently of space and any events within i
     $$
     \hat{t} = T_0\, t,
     $$
-    making $t$ dimensionless.
+    making $t$ dimensionless. In plain language: we pick a time unit $T_0$ (say, “one tick”) and measure all times as pure numbers of ticks, which keeps equations clean and unit-consistent.
 
 2.  **Linear Advancement:** Time progresses at a constant rate. The duration (interval) between two instants $t_1$ and $t_2$ is given by the distance:
     $$
