--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -34,7 +34,7 @@ $$
 $$
 In global inertial coordinates, the connection coefficients vanish and spatial geodesics within each $\Sigma_t$ are straight lines.
 
-Each slice $(\Sigma_t, h)$ carries the usual Euclidean geometry of absolute space (00.0.2).
+Each slice $(\Sigma_t, h)$ carries the usual Euclidean geometry of absolute space (00.0.2). Plain language: we separate a universal clock from the rulers on each “snapshot” of space; think of a flipbook of 3D spaces indexed by $t$, and we never rotate time into space.
 
 ---
 
@@ -47,7 +47,7 @@ with $t$ increasing (time orientation). The velocity and acceleration are
 $$
 v(t) = \frac{dx}{dt}, \qquad a(t) = \frac{dv}{dt}.
 $$
-There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations are measured separately by $h$ and $\tau$.
+There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations are measured separately by $h$ and $\tau$. Plain language: a worldline is just the trail of a moving dot through successive instants; speed is distance-over-time $dx/dt$, and we avoid any 4D “arc length” that would mix apples (space) with oranges (time).
 
 ---
 
@@ -76,7 +76,7 @@ For field theories/PDEs defined on $\Sigma_t$, the Euclidean Laplacian is
 $$
 \Delta = \partial_x^2 + \partial_y^2 + \partial_z^2 = \delta^{ij}\,\partial_i \partial_j.
 $$
-A natural spacetime measure for integration is $dt\, dV$.
+A natural spacetime measure for integration is $dt\, dV$. In plain language: to compute a total amount over time and space, add up over space first, then add those totals over time (or vice versa).
 
 Units and distances. We do not define a 4D distance mixing $t$ and $x^i$. Durations are measured by the absolute clock $\tau=dt$ and spatial distances within each slice by the Euclidean metric $h_{ij}=\delta_{ij}$. If one needs to compare time and length scales, fix a spatial scale $L_0$ and the time scale $T_0$ (see 00.0.1), which induces a characteristic speed $v_0=L_0/T_0$. By default we avoid such identifications; analyses use $\tau$ and $h$ separately.
 
