--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -11,11 +11,12 @@ Architrinos are the sole carriers of kinetic and potential energy in this model.
 ### **Coincidence of Particles**
 As point particles, Architrinos have no physical volume. There is nothing in the model to prevent two or more particles from occupying the same location at the same instant in time. For example, in an otherwise empty timespace, an Electrino and a Positrino released from rest with some initial separation will accelerate towards each other and eventually coincide as they pass.
 
-### **Path Definition**
-The **path** of an Architrino is the set of points representing its position through time. For any time $t$ up to the present moment $t_{\text{now}}$, the path is the set:
+### **Worldline and Regularity**
+The worldline of Architrino $a$ is a map $\mathbf{s}_a: (-\infty, t_{\text{now}}] \to \mathbb{R}^3$, assumed at least absolutely continuous in $t$, so the velocity $\mathbf{v}_a(t) = d\mathbf{s}_a/dt$ exists almost everywhere and is piecewise continuous. The historical path up to $t_{\text{now}}$ is:
 $$
 \mathcal{P}_a = \{ \mathbf{s}_a(t) \mid t \le t_{\text{now}} \}
 $$
+Reparametrization by an auxiliary parameter $s$ is permitted provided $t(s)$ is strictly increasing (i.e., $dt/ds > 0$), in which case $\mathbf{v}_a = (d\mathbf{s}_a/ds)/(dt/ds)$.
 
 ### **Sphere Stream**
 As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding potential spheres. The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
@@ -26,7 +27,22 @@ The sphere stream, denoted $\mathcal{SS}_a(t_{obs})$, is the union of all these 
 $$
 \mathcal{SS}_a(t_{obs}) = \bigcup_{t_0 \le t_{obs}} \{ \mathbf{s} \in \mathbb{R}^3 \mid \|\mathbf{s} - \mathbf{s}_a(t_0)\| = v(t_{obs} - t_0) \}
 $$
-This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$. Since the Architrino's path extends through all of history, its sphere stream is space-filling.
+This set represents the complete locus of points in space where the Architrino's field is currently active at time $t_{obs}$. Under mild conditions on the historical worldline (e.g., unbounded excursion over time), the union of expanding wavefronts can densely cover space within bounded regions; in general, the coverage depends on the geometry of $\mathbf{s}_a(t)$.
+
+In plain language: imagine the Architrino dropping tiny “pings” at every moment of its life; each ping becomes a perfectly spherical ripple that expands at speed $v$. The sphere stream at observation time is just the collection of all those ripples at their current sizes.
+
+### **Causal Intersection Times**
+For a receiver $a$ at time $t$ and a source particle $j$, define the causal set of emission times
+$$
+\mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\big\}.
+$$
+When $|\mathbf{v}_j(t_0)| < v$ near a solution, $\mathcal{C}_j(t)$ is typically a singleton (“unique causal time”); when $|\mathbf{v}_j|\ge v$, multiple solutions can occur (multi-hit regime). Self-intersection corresponds to $j=a$ with $t_0<t$.
+
+Plain language: you feel a push now from source $j$ only if one of its earlier spherical wavefronts has had exactly enough time to reach you; the equation says “distance traveled by the sphere equals the time since it was emitted, times $v$.”
+
+### **Conventions at Singular Cases**
+- No instantaneous self-force: the $\tau = t - t_0 = 0$ emission does not produce an immediate self-acceleration (we take $H(0)=0$ in the emission formula).
+- Center hits (exactly $r=0$ with $\tau>0$) are symmetric and produce no net directional acceleration; this case has measure zero and can be handled via standard regularization (see Action and Interaction). Intuitively, striking the exact center gives no preferred direction, so any would-be push cancels out.
 
 Sphere streams from different Architrinos pass through each other without interacting. This non-interference is what allows for the principle of superposition to be applied when calculating the total acceleration on a particle.
 
