spatial arclength is a cool concept

--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -47,7 +47,8 @@ with $t$ increasing (time orientation). The velocity and acceleration are
 $$
 v(t) = \frac{dx}{dt}, \qquad a(t) = \frac{dv}{dt}.
 $$
-There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations are measured separately by $h$ and $\tau$. Plain language: a worldline is just the trail of a moving dot through successive instants; speed is distance-over-time $dx/dt$, and we avoid any 4D “arc length” that would mix apples (space) with oranges (time).
+There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations are measured separately by $h$ and $\tau$. Plain language: a worldline is just the trail of a moving dot through successive instants; speed is distance-over-time $dx/dt$, and we avoid any 4D “arc length” that would mix apples (space) with oranges (time). When we say “length of a path,” we mean the spatial arclength
+$L[x; t_1, t_2] = \int_{t_1}^{t_2} \|v(t)\|\, dt$.
 
 ---
 
