--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -18,6 +18,13 @@ $$
 $$
 Reparametrization by an auxiliary parameter $s$ is permitted provided $t(s)$ is strictly increasing (i.e., $dt/ds > 0$), in which case $\mathbf{v}_a = (d\mathbf{s}_a/ds)/(dt/ds)$.
 
+### **Spatial Arclength (terminology)**
+We reserve “length of a path” to mean the spatial arclength over a time interval, defined by
+$$
+L[\mathbf{s}_a; t_1, t_2] \;=\; \int_{t_1}^{t_2} \big\|\mathbf{v}_a(t)\big\|\, dt,
+$$
+with durations measured separately as $\Delta t = t_2 - t_1$. We do not define any 4D arc length mixing time and space.
+
 ### **Sphere Stream**
 As an Architrino moves along its path $\mathcal{P}_a$, it continuously emits expanding potential spheres. The collection of all spheres emitted from its past path, as they exist at a single moment in time, is called the **sphere stream**.
 
