--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -58,6 +58,8 @@ whose delayed solution is $\rho(t,\mathbf{s})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)
 
 Plain language: the conservation law says nothing is lost or gained as the ripple expands; what flows through each spherical surface in time is exactly what was injected at the center.
 
+Geodesics and dynamics: The background is flat and non-dynamical; free motion follows straight lines at constant velocity. All accelerations in this model come from interactions with fields and assemblies on this fixed background, not from curvature of the background itself.
+
 ---
 
 ### Advanced Dynamics: Velocity Regimes and Emission
