--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -1,6 +1,6 @@
 # Kinetic and Potential Energy
 
-In this model, all energy is fundamentally tied to the Architrinos and the potential fields they generate. Architrinos are the sole carriers of kinetic energy through their motion and the source of potential energy through their interactions.
+In this model, all energy is fundamentally tied to the Architrinos and the potential fields they generate. Architrinos are the sole carriers of kinetic energy through their motion and the source of potential energy through their interactions. All such dynamics unfold on a flat, non-dynamical background; forces and motion arise from fields and assemblies rather than any curvature of the background itself.
 
 ### Kinetic Energy and Momentum
 
