--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
@@ -30,3 +30,5 @@ Absolute time flows uniformly and independently of space and any events within i
 6.  **Symmetries:** The kinematic symmetry group of time is the additive group $(\mathbb{R}, +)$ of time translations. At the kinematic level, time-reversal $t \mapsto -t$ is a symmetry; the chosen time orientation selects a direction for modeling but does not alter the invariance of the background structure.
 
 Geodesics and dynamics: Time serves as a universal, non-dynamical parameter; forces and motion arise from fields and assemblies evolving in absolute space over time, not from any curvature or dynamics of the time background itself.
+
+Causality: A precedes B iff $t_A < t_B$. Worldlines are monotone in $t$ (no closed causal loops). All interactions are retarded in $t$.
