--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -50,6 +50,9 @@ $$
 There is no 4D path length mixing $t$ and $x^i$; spatial lengths and durations are measured separately by $h$ and $\tau$. Plain language: a worldline is just the trail of a moving dot through successive instants; speed is distance-over-time $dx/dt$, and we avoid any 4D “arc length” that would mix apples (space) with oranges (time). When we say “length of a path,” we mean the spatial arclength
 $L[x; t_1, t_2] = \int_{t_1}^{t_2} \|v(t)\|\, dt$.
 
+### 3a. Causality and propagation
+We adopt an absolute causal order: event A precedes event B iff $t_A < t_B$. Influences propagate via spherical wavefronts at a finite speed $v$; define $c_{\max} \equiv v$ as the maximal signal speed in the model. An event $(t_0, x_0)$ can influence points $(t, x)$ only if $t > t_0$ and $\|x - x_0\| = v\,(t - t_0)$. There are no advanced or instantaneous interactions (retarded-only). The background geometry provides no additional causal cones; causality is entirely determined by this propagation rule.
+
 ---
 
 ### 4. Symmetry group (Galilean group)
