--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.1 - Absolute Time.md
@@ -21,7 +21,7 @@ Absolute time flows uniformly and independently of space and any events within i
     \Delta \hat{t} = T_0\, \Delta t.
     $$
 
-3.  **Time Orientation (not a thermodynamic arrow):** The set of all instants is totally ordered. For any two distinct moments $t_1$ and $t_2$, one must precede the other ($t_1 < t_2$ or $t_2 < t_1$). By convention, “future” corresponds to increasing $t$ and “past” to decreasing $t$. Any physical arrow of time (e.g., thermodynamic) is an emergent property of dynamics, not a kinematic postulate.
+3.  **Time orientation:** We endow $\mathbb{R}$ with an orientation; “future” corresponds to increasing $t$ and “past” to decreasing $t$. The set of all instants is totally ordered. Any physical arrow of time (e.g., thermodynamic) is an emergent property, not a kinematic postulate.
 
 4.  **Absolute Nature:** The time coordinate $t$ is universal. The duration $\Delta t$ between two events is the same for all observers, regardless of their position or motion.
 
