--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.3 - Absolute Timespace.md
@@ -1,4 +1,13 @@
-We model absolute timespace as a product manifold equipped with Galilean/Newton–Cartan structure, consistent with absolute time and absolute space. The arena is fixed, non-dynamical, homogeneous, and without a privileged origin. Choices of temporal zero and spatial origin are conventions. We deliberately use the term “timespace” to introduce a neoclassical concept and to avoid confusion with relativistic “spacetime.”
+We model absolute timespace as a product manifold equipped with Galilean/Newton–Cartan structure, consistent with absolute time and absolute space. The arena is fixed, non-dynamical, homogeneous, and without a privileged origin. Choices of temporal zero and spatial origin are conventions. We deliberately use the term “timespace” to introduce a neoclassical concept and to avoid confusion with relativistic “spacetime.” We restrict to transformations that preserve this foliation (Galilean kinematics).
+
+Axioms (kinematics)
+1. Time: Time is $\mathbb{R}$, oriented, universal, translation-invariant, and without bounds.
+2. Space: Space is $\mathbb{R}^3$ with flat Euclidean metric, homogeneous and isotropic (symmetry group $E(3)$).
+3. Background and transformations: The background is $\mathbb{R}\times\mathbb{R}^3$ with absolute clock $\tau=dt$ and flat spatial metric $h$ on the slices $t=\text{const}$. Allowed transformations preserve this foliation (Galilean kinematics: time/spatial translations, rotations, boosts).
+
+Plain language: one global clock and ordinary 3D flat space; allowed coordinate changes keep “snapshots” of space separated from time.
+
+Notation: Bold symbols denote spatial vectors (e.g., $\mathbf{x}, \mathbf{s}, \mathbf{v}, \mathbf{a}$); indices $i,j$ refer to components with $\delta_{ij}$. We do not use a 4D non-degenerate metric; we avoid $x^0$ unless explicitly stating no mixing with spatial indices is permitted.
 
 ---
 
@@ -63,6 +72,8 @@ The kinematic symmetry group is the Galilean group, preserving $\tau$, $h$, and 
 
 Equivalently, the group combines time translations $\mathbb{R}$, spatial translations $\mathbb{R}^3$, rotations $SO(3)$, and boosts $\mathbb{R}^3$ in the standard semidirect-product structure.
 
+Dynamical note: The finite propagation speed $v$ is defined in the absolute rest frame and therefore selects a preferred frame for dynamics; boost invariance is a symmetry of the background kinematics but not of the interaction law.
+
 ---
 
 ### 5. Coordinates and frames
@@ -84,8 +95,15 @@ A natural spacetime measure for integration is $dt\, dV$. In plain language: to 
 
 Units and distances. We do not define a 4D distance mixing $t$ and $x^i$. Durations are measured by the absolute clock $\tau=dt$ and spatial distances within each slice by the Euclidean metric $h_{ij}=\delta_{ij}$. If one needs to compare time and length scales, fix a spatial scale $L_0$ and the time scale $T_0$ (see 00.0.1), which induces a characteristic speed $v_0=L_0/T_0$. By default we avoid such identifications; analyses use $\tau$ and $h$ separately.
 
+### 6a. Regularity and boundary conditions
+- Worldlines are absolutely continuous with piecewise continuous velocities (velocity of bounded variation under impulsive forces); reparametrizations $t(s)$ are strictly increasing.
+- Source configurations are locally finite (or integrable measures) so that superpositions converge; fields are tempered distributions or $\varepsilon$-mollified to $C^\infty$ with the same total charge.
+- Solutions decay suitably at spatial infinity; unless otherwise specified, no incoming radiation is assumed from infinity.
+
+Plain language: paths are “nice enough to have speeds,” sources don’t pile up infinitely in any bounded region, and fields thin out far away so sums and integrals make sense.
+
 ---
 
 ### 7. Relation to relativistic descriptions
-For comparison, relativistic models employ a Lorentzian metric on a 4D manifold, leading to lightcones and a universal speed $c$. In our neoclassical model, the background remains Newton–Cartan with absolute time; any Einstein-like phenomenology is emergent from scalable assemblies on this fixed background, not from curvature of the background itself.
+For comparison, relativistic models employ a Lorentzian metric on a 4D manifold, leading to lightcones and a universal speed $c$. In our neoclassical model, the background remains Newton–Cartan with absolute time; any Einstein-like phenomenology is emergent from scalable assemblies on this fixed background, not from curvature of the background itself. Coarse-grained excitations in certain coherent assemblies can propagate on effective cones that approximate a Lorentzian metric with characteristic speed close to $v$; this emergent behavior does not modify the background kinematic group.
 
