--- a/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.0 - Absolute Time and Space/00.0.2 - Absolute Space.md
@@ -72,4 +72,4 @@ $$
 \Delta = \partial_x^2 + \partial_y^2 + \partial_z^2 = \delta^{ij}\,\partial_i\partial_j.
 $$
 
-Geodesics and dynamics: In this flat, non-dynamical space, geodesics are straight lines and do not encode forces; accelerations arise from fields and assemblies acting within this fixed Euclidean background, not from curvature of the background itself. Causality is not encoded by spatial geometry; it is supplied by the field propagation rule with finite speed $v$ ($c_{\max}$), as defined in the dynamics.
+Geodesics and dynamics: In this flat, non-dynamical space, geodesics are straight lines and do not encode forces; accelerations arise from fields and assemblies acting within this fixed Euclidean background, not from curvature of the background itself. Causality is not encoded by spatial geometry; it is supplied by the field propagation rule with finite speed $v$ ($c_{\max}$), as defined in the dynamics. All statements are coordinate-invariant under $E(3)$; only displacements are physical and origins are gauge choices.
