--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.2 - Electrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.2 - Electrino.md
@@ -12,13 +12,14 @@ An Electrino, located at position $\mathbf{s}_e(t)$, is a point particle that mo
 
 -   **Causal Interaction:** At time $t$, define the causal set of emission times from source $j$
     $$
-    \mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_e(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\big\}.
+    \mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_e(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
     $$
+    We work in units with field speed $v=1$.
     For each $t_0 \in \mathcal{C}_j(t)$, let $\hat{\mathbf{r}}_{je}(t_0) = (\mathbf{s}_e(t) - \mathbf{s}_j(t_0))/\|\mathbf{s}_e(t) - \mathbf{s}_j(t_0)\|$. The signed acceleration contribution is
     $$
-    \mathbf{a}_{e\leftarrow j}(t; t_0) = \sigma_{q_j q_e}\,A_{j,e}(t,t_0)\,\hat{\mathbf{r}}_{je}(t_0),
+    \mathbf{a}_{e\leftarrow j}(t; t_0) = \kappa\,\sigma_{q_j q_e}\,\frac{|q_j|}{1+|\mathbf{v}_j(t_0)|}\,\frac{|q_e|}{\|\mathbf{s}_e(t) - \mathbf{s}_j(t_0)\|^2}\,\hat{\mathbf{r}}_{je}(t_0),
     $$
-    where $\sigma_{q_j q_e}=+1$ for like charges (repulsion) and $-1$ for unlike charges (attraction), and $A_{j,e}$ encodes the emitter’s effective charge $q_{\text{eff},j}(t_0)$, any receiver-side velocity modulation, and the $1/r^2$ geometric scaling on the shell. The net acceleration sums over all $t_0 \in \mathcal{C}_j(t)$ and over all sources $j$.
+    where $\sigma_{q_j q_e}=+1$ for like charges (repulsion) and $-1$ for unlike charges (attraction); $\kappa>0$ is the universal coupling constant. The net acceleration sums over all $t_0 \in \mathcal{C}_j(t)$ and over all sources $j$.
 
     Plain language: you are pushed now by every earlier sphere that can just reach you; the push points back to where that sphere came from, it’s stronger when you’re closer and when the emitter was “brighter,” and all such pushes add up.
 
