--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Positrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Positrino.md
@@ -12,13 +12,14 @@ A Positrino, located at position $\mathbf{s}_p(t)$, is a point particle that mov
 
 -   **Causal Interaction:** At time $t$, define the causal set of emission times from source $j$
     $$
-    \mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_p(t) - \mathbf{s}_j(t_0)\| = v\,(t - t_0) \,\big\}.
+    \mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_p(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
     $$
+    We work in units with field speed $v=1$.
     For each $t_0 \in \mathcal{C}_j(t)$, let $\hat{\mathbf{r}}_{jp}(t_0) = (\mathbf{s}_p(t) - \mathbf{s}_j(t_0))/\|\mathbf{s}_p(t) - \mathbf{s}_j(t_0)\|$. The signed acceleration contribution is
     $$
-    \mathbf{a}_{p\leftarrow j}(t; t_0) = \sigma_{q_j q_p}\,A_{j,p}(t,t_0)\,\hat{\mathbf{r}}_{jp}(t_0),
+    \mathbf{a}_{p\leftarrow j}(t; t_0) = \kappa\,\sigma_{q_j q_p}\,\frac{|q_j|}{1+|\mathbf{v}_j(t_0)|}\,\frac{|q_p|}{\|\mathbf{s}_p(t) - \mathbf{s}_j(t_0)\|^2}\,\hat{\mathbf{r}}_{jp}(t_0),
     $$
-    where $\sigma_{q_j q_p}=+1$ for like charges (repulsion) and $-1$ for unlike charges (attraction), and $A_{j,p}$ encodes the emitter’s effective charge $q_{\text{eff},j}(t_0)$, any receiver-side velocity modulation, and the $1/r^2$ geometric scaling on the shell. The net acceleration sums over all $t_0 \in \mathcal{C}_j(t)$ and over all sources $j$.
+    where $\sigma_{q_j q_p}=+1$ for like charges (repulsion) and $-1$ for unlike charges (attraction); $\kappa>0$ is the universal coupling constant. The net acceleration sums over all $t_0 \in \mathcal{C}_j(t)$ and over all sources $j$.
 
     Plain language: you accelerate along the line from the past emission point to your current location; like charges push you away, unlike charges pull you in, and the total effect is the sum of all such contributions that can arrive now.
 
